<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label"/>
    <ListPreference
        android:title="@string/settings_order_by_label"
        android:key="@string/settings_order_by_key"
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settins_order_by_label"
        android:entryValues="@array/setting_order_by_value"/>
    <ListPreference
        android:title="@string/settings_limit_label"
        android:key="@string/settings_limit_key"
        android:defaultValue="@string/settings_limit_default"
        android:entries="@array/settings_limit_label"
        android:entryValues="@array/settings_limit_value"/>
</PreferenceScreen>